<resources>
    <string name="app_name">PasserBy</string>

    <string name="google_maps_key">AIzaSyBfffgfmuX2uumW09fqJZKbEHOnPqSPzaE</string>


    <string name="passerby">Passerby</string>
    <string name="chats">Chats</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="next">NEXT</string>
    <string name="next_s">Next</string>
    <string name="send">Send</string>
    <string name="finish">FINISH</string>
    <string name="done">Done</string>
    <string name="add_image">Add Image</string>
    <string name="finish_s">Finish</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_">Forgot \nPassword</string>
    <string name="login_here">Login here</string>
    <string name="resend_email">Resend Email</string>
    <string name="create_one_here">Create one here</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="your_name">What\'s your name?</string>
    <string name="your_email">What is your email?</string>
    <string name="otp_verification">A verification code has been sent to your email.</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="enter_birthday">Enter your birthday</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_email">Edit email</string>
    <string name="ok">OK</string>
    <string name="ok_s">Ok</string>
    <string name="user_blocked">The user has been blocked.</string>
    <string name="signin_again">Please Sign in again</string>
    <string name="upload_profile_pic">Upload a profile picture</string>
    <string name="do_later">I\'ll do this later</string>
    <string name="dont_receive_code">Don\'t receive the code?</string>
    <string name="dummy_message">"The girl who lived"</string>
    <string name="type_message">Type your message</string>
    <string name="message_sent">Message Sent</string>
    <string name="sent">Sent</string>
    <string name="eighteen_plus">* Only 18+ can sign up</string>
    <string name="message_new">New Message</string>
    <string name="ready_to_go">That\'s it! You\'re \nready to go!</string>
    <string name="welcome_to_passerby">Welcome to \nPasserby!</string>
    <string name="user_details">Sometime life takes you places you never expected to be, some good and some bad.The good
        ones are reward from going through the bad.Just stay strong and good to people.
    </string>


    <string name="meet_someone_new">Get out there and meet someone new!</string>
    <string name="userIcon_adv">You can access \n(and edit) your \nprofile from the \nicon at the top left.</string>
    <string name="passerby_adv">This page is where \nyou can see all the \nusers you have \npassed.</string>
    <string name="map_adv">You can press the \nmap icon to see \nwhere you were \nwhen you passed \nthem.</string>
    <string name="menu_adv">You can access \nyour settings fom \nthe icon at the top \nright.</string>
    <string name="chat_adv">This page is where all \nyour conversations \nwith your new \nfriends can be found.</string>
    <string name="switch_adv">You can switch \nbetween here and the \nprevious page by \npressing the toggle \nswitch at
        the top of \nthe screen.
    </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email_empty">Please enter email</string>
    <string name="email_invalid">Please enter valid email</string>
    <string name="password_empty">Please enter password</string>
    <string name="name_empty">Please enter Name</string>
    <string name="image_empty">Please set profile image</string>
    <string name="enter_otp_full">OTP is incomplete</string>
    <string name="select_dob">Please enter date of birth</string>
    <string name="password_invalid">Password must be altleast 6 characters</string>
    <string name="name_invalid">Name must be altleast 3 characters</string>
    <string name="dob_invalid">Age must be altleast 18 years</string>
    <string name="user_is_unauthorized">User is Unauthorized</string>

    <string name="add_bio">Add Bio</string>
    <string name="add">Add</string>
    <string name="block_report">Block &amp; Report</string>
    <string name="settings">Settings</string>
    <string name="some_error">Some Error Occurred</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="reason_for_blocking">What is the reason for \nblocking this user?</string>

    <string name="reason_1">User was rude or disrespectful</string>
    <string name="reason_2">User has inappropriate content</string>
    <string name="reason_3">User was abusive or threatening</string>
    <string name="reason_4">User is not who they claim they are</string>
    <string name="reason_5">I just don\'t want them to see me on h..</string>


    <string name="block_info">We want you to feel comfortable using this app.Please let us know what happened so we can
        keep this community safe.This is anonymous)
    </string>


    <string name="edit">Edit</string>
    <string name="skip">Skip</string>
    <string name="my_quote">My Quote</string>
    <string name="my_email">My Email</string>
    <string name="my_name">My Name</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service_">Terms of Service</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="logout">Logout</string>
    <string name="new_passerby">New Passerby</string>
    <string name="new_message">New Message</string>


    <string name="my_quote_details">Taking life one day at a time and seeing where the wind takes me.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
