<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/root_loginSignup"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="-36dp"
            android:layout_marginBottom="-46dp"
            android:background="@drawable/login_img">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passerby"
                android:textSize="@dimen/_36sdp"
                android:id="@+id/txt_passerby_loginSignup"
                android:fontFamily="@font/avenirheavy"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_60sdp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txt_passerby_loginSignup">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:text="@string/login"
                        android:gravity="center"
                        android:fontFamily="@font/avenir_65_edium"
                        android:id="@+id/login_loginOrSignup"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/rounded_outlining_white"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_22sdp"/>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:text="@string/signup"
                        android:gravity="center"
                        android:fontFamily="@font/avenir_65_edium"
                        android:id="@+id/signup_loginOrSignup"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/rounded_outlining_white"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_22sdp"/>

                <View
                        android:layout_width="match_parent"
                          android:layout_height="@dimen/_50sdp"/>




            </LinearLayout>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_service"
                    android:textSize="@dimen/_14sdp"
                    android:id="@+id/txtview_termsCondLoginSignup"
                    android:fontFamily="@font/avenir_85_heavy"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_56sdp"
                    android:textColor="@color/colorWhite"/>


        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>